dataset1235/2025-2/2947369575/users/1936540434/executions/1003782500_48684178.log
== RUN (2025-08-27 23:00:52)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ttv = float(input("Total de vendas:" ))
gb = (ttv*3/10)
print ("Bilichilde recebeu:", gb )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:Bilichilde recebeu: 435.86400000000003
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:Bilichilde recebeu: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:Bilichilde recebeu: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:Bilichilde recebeu: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:Bilichilde recebeu: 165.30599999999998
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:Bilichilde recebeu: 568.197
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:01:10)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ttv = float(input("Total de vendas:" ))
gb = (ttv*3/10)
print ("Bilichilde recebeu:", round (gb,2) )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:Bilichilde recebeu: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:Bilichilde recebeu: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:Bilichilde recebeu: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:Bilichilde recebeu: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:Bilichilde recebeu: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:Bilichilde recebeu: 568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:01:15)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ttv = float(input("Total de vendas:" ))
gb = (ttv*3/10)
print ("Bilichilde recebeu:", round (gb,2) )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:Bilichilde recebeu: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:Bilichilde recebeu: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:Bilichilde recebeu: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:Bilichilde recebeu: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:Bilichilde recebeu: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:Bilichilde recebeu: 568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:31)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ttv = float(input("Total de vendas:" ))
gb = (ttv*3/10)
print ("Bilichilde recebeu:")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:Bilichilde recebeu:
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:Bilichilde recebeu:
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:Bilichilde recebeu:
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:Bilichilde recebeu:
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:Bilichilde recebeu:
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:Bilichilde recebeu:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:47)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ttv = float(input("Total de vendas:" ))
gb = (ttv*3/10)
print ("Bilichilde recebeu:" gb )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    print ("Bilichilde recebeu:" gb )
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    print ("Bilichilde recebeu:" gb )
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    print ("Bilichilde recebeu:" gb )
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    print ("Bilichilde recebeu:" gb )
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    print ("Bilichilde recebeu:" gb )
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    print ("Bilichilde recebeu:" gb )
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
